popup width: tring to avoid visible resize on desktop

--- a/extension/base/browser/popup/popup.css
+++ b/extension/base/browser/popup/popup.css
@@ -1,5 +1,5 @@
 body {
-  /* width: 350px; set programatically based on platform */
+  /* width: 350px; we set programatically based on platform */
   height: auto;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue",
     sans-serif;
@@ -8,10 +8,16 @@ body {
   padding: 0;
 }
 
-/* Apply 350px width only on desktop-sized windows, this prevents a visble resize as the menu comes up */
-@media screen and (min-width: 600px) {
+html,
+body {
+  width: 350px; /* latest attempt - set it for all platforms and reset it for phones */
+}
+
+/* Only remove the fixed width on smaller screens (iOS/Mobile) */
+@media screen and (max-width: 599px) {
   body {
-    width: 350px;
+    width: auto;
+    min-width: 100vw; /* Ensure it fills the mobile screen */
   }
 }
 
